--- a/package.json
+++ b/package.json
@@ -1,10 +1,28 @@
 {
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
+    "@react-navigation/stack": "^6.2.1",
     "expo": "^45.0.0",
+    "expo-linear-gradient": "^11.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-dropdown-picker": "^5.4.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-select-dropdown": "^2.0.3",
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-web": "0.17.7",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
